--- a/css/style.css
+++ b/css/style.css
@@ -40,5 +40,47 @@
 
 body {
   font-family: "IRANSans";
+  direction: rtl;
+}
+
+header {
+  background-color: #2196f3;
+  height: 80px;
+  -webkit-box-shadow: 0px 3px 18px 0px #6e6d6e;
+          box-shadow: 0px 3px 18px 0px #6e6d6e;
+}
+
+header .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header .header__right-menu ul {
+  list-style: none;
+  padding: 18px;
+}
+
+header .header__right-menu ul li {
+  display: inline;
+}
+
+header .header__right-menu ul li a {
+  color: #fcfcfc;
+  font-size: 20px;
+  margin: 15px;
+}
+
+header .header__left-menu {
+  padding: 10px;
+  margin: 10px;
+  color: #fcfcfc;
+}
+
+header .header__left-menu i {
+  margin-left: 30px;
 }
 /*# sourceMappingURL=style.css.map */
