--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,37 @@
 @import "./fonts";
 body {
     font-family: "IRANSans";
+    direction: rtl;
+}
+
+header {
+    background-color: #2196f3;
+    height: 80px;
+    box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
+    .header {
+        display: flex;
+        justify-content: space-between;
+        &__right-menu {
+            ul {
+                list-style: none;
+                padding: 18px;
+                li {
+                    display: inline;
+                    a {
+                        color: #fcfcfc;
+                        font-size: 20px;
+                        margin: 15px;
+                    }
+                }
+            }
+        }
+        &__left-menu {
+            padding: 10px;
+            margin: 10px;
+            color: #fcfcfc;
+            i {
+                margin-left: 30px;
+            }
+        }
+    }
 }
