--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
 body {
   font-family: "IRANSans";
   direction: rtl;
+  background-color: #eeeeee;
 }
 
 header {
@@ -82,5 +83,96 @@ header .header__left-menu {
 
 header .header__left-menu i {
   margin-left: 30px;
+}
+
+.detail-product {
+  background-color: #ffffff;
+  margin-top: 60px;
+}
+
+.detail-product .product-images {
+  padding: 40px 0px;
+}
+
+.detail-product .product-images .product-image {
+  position: relative;
+  max-width: 100%;
+}
+
+.detail-product .product-images .tag {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 18px 20px;
+  color: #fcfcfc;
+  background: #f44336;
+}
+
+.detail-product .product-texts {
+  padding: 40px 10px;
+}
+
+.detail-product .product-texts .product-title {
+  font-weight: lighter;
+  font-size: 28px;
+}
+
+.detail-product .product-texts .product-sub-title {
+  font-weight: lighter;
+  font-size: 17px;
+  margin-top: 17px;
+}
+
+.detail-product .product-rate {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.detail-product .product-rate i {
+  color: #2196f3;
+}
+
+.detail-product .product-price {
+  margin-top: 10px;
+  color: #777;
+}
+
+.detail-product .product-color {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 10px;
+}
+
+.detail-product .product-color .colors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.detail-product .product-color .colors .circle-color {
+  border: 2px solid #2196f3;
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  margin-left: 3px;
+}
+
+.detail-product .product-color .colors .color-white {
+  background-color: #fcfcfc;
+}
+
+.detail-product .product-color .colors .color-blue {
+  background-color: #2196f3;
 }
 /*# sourceMappingURL=style.css.map */
