--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 body {
     font-family: "IRANSans";
     direction: rtl;
+    background-color: #eeeeee;
 }
 
 header {
@@ -31,6 +32,71 @@ header {
             color: #fcfcfc;
             i {
                 margin-left: 30px;
+            }
+        }
+    }
+}
+
+.detail-product {
+    background-color: #ffffff;
+    margin-top: 60px;
+    .product-images {
+        padding: 40px 0px;
+        .product-image {
+            position: relative;
+            max-width: 100%;
+        }
+        .tag {
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: 18px 20px;
+            color: #fcfcfc;
+            background: #f44336;
+        }
+    }
+    .product-texts {
+        padding: 40px 10px;
+        .product-title {
+            font-weight: lighter;
+            font-size: 28px;
+        }
+        .product-sub-title {
+            font-weight: lighter;
+            font-size: 17px;
+            margin-top: 17px;
+        }
+    }
+    .product-rate {
+        display: flex;
+        justify-content: flex-start;
+        i {
+            color: #2196f3;
+        }
+    }
+    .product-price {
+        margin-top: 10px;
+        color: #777;
+    }
+    .product-color {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        .colors {
+            display: flex;
+            justify-content: flex-start;
+            .circle-color {
+                border: 2px solid #2196f3;
+                border-radius: 50%;
+                height: 35px;
+                width: 35px;
+                margin-left: 3px;
+            }
+            .color-white {
+                background-color: #fcfcfc;
+            }
+            .color-blue {
+                background-color: #2196f3;
             }
         }
     }
