--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header .header__left-menu i {
 }
 
 .detail-product .product-images {
-  padding: 40px 0px;
+  padding: 60px 0px;
 }
 
 .detail-product .product-images .product-image {
@@ -174,5 +174,57 @@ header .header__left-menu i {
 
 .detail-product .product-color .colors .color-blue {
   background-color: #2196f3;
+}
+
+.detail-product .product-garanty {
+  margin-top: 30px;
+}
+
+.c-select {
+  border-radius: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+}
+
+.c-primary-button {
+  border-radius: 0;
+  padding: 15px 20px;
+  font-size: 17px;
+  font-weight: 300;
+  border: none;
+  background-color: #2196f3;
+}
+
+.c-primary-button:hover {
+  background-color: #39a1f4;
+}
+
+.c-secondary-button {
+  border-radius: 0;
+  padding: 15px 20px;
+  font-size: 17px;
+  font-weight: 300;
+  background-color: #dcdcdc;
+  color: #9e9e9e;
+  border: none;
+}
+
+.c-secondary-button:hover {
+  background-color: #e9e9e9;
+  color: #9e9e9e;
+}
+
+.c-secondary-button .scale {
+  padding: 35px;
+}
+
+.product-buttons {
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+
+.services {
+  margin-top: 40px;
 }
 /*# sourceMappingURL=style.css.map */
