--- a/css/style.scss
+++ b/css/style.scss
@@ -41,7 +41,7 @@ header {
     background-color: #ffffff;
     margin-top: 60px;
     .product-images {
-        padding: 40px 0px;
+        padding: 60px 0px;
         .product-image {
             position: relative;
             max-width: 100%;
@@ -100,4 +100,52 @@ header {
             }
         }
     }
+    .product-garanty {
+        margin-top: 30px;
+    }
+}
+
+.c-select {
+    border-radius: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 50px;
+}
+
+.c-primary-button {
+    border-radius: 0;
+    padding: 15px 20px;
+    font-size: 17px;
+    font-weight: 300;
+    border: none;
+    background-color: #2196f3;
+    &:hover {
+        background-color: #39a1f4;
+    }
+}
+
+.c-secondary-button {
+    border-radius: 0;
+    padding: 15px 20px;
+    font-size: 17px;
+    font-weight: 300;
+    background-color: #dcdcdc;
+    color: #9e9e9e;
+    border: none;
+    &:hover {
+        background-color: #e9e9e9;
+        color: #9e9e9e;
+    }
+    .scale {
+        padding: 35px;
+    }
+}
+
+.product-buttons {
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+.services {
+    margin-top: 40px;
 }
