--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@
   src: url("../fonts/eot/IRANSansWeb.eot?#iefix") format("embedded-opentype"), url("../fonts/woff2/IRANSansWeb.woff2") format("woff2"), url("../fonts/woff/IRANSansWeb.woff") format("woff"), url("../fonts/ttf/IRANSansWeb.ttf") format("truetype");
 }
 
+.owl-carousel .active span {
+  background: #2196f3 !important;
+}
+
 body {
   font-family: "IRANSans";
   direction: rtl;
@@ -226,5 +230,58 @@ header .header__left-menu i {
 
 .services {
   margin-top: 40px;
+}
+
+.images-adv {
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+
+.images-adv img {
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 0px 14px 3px;
+          box-shadow: 0px 0px 14px 3px;
+  max-height: 150px;
+  max-width: 550px;
+}
+
+.images-adv button {
+  position: absolute;
+  border-radius: 58px;
+  padding: 20px 20px;
+  color: #f44336;
+  border: 1px solid #f44336;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  background: rgba(0, 0, 0, 0);
+  top: 40px;
+  left: 112px;
+}
+
+.product-similar {
+  padding-top: 50px;
+}
+
+#products .item {
+  position: relative;
+}
+
+#products .item__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#products .item__price--right {
+  background: none !important;
+}
+
+#products .item__price--left {
+  position: absolute;
+  left: 0;
+  padding: 8px;
 }
 /*# sourceMappingURL=style.css.map */
