--- a/css/style.scss
+++ b/css/style.scss
@@ -1,151 +1,197 @@
-@import "./fonts";
-body {
-    font-family: "IRANSans";
-    direction: rtl;
-    background-color: #eeeeee;
-}
-
-header {
-    background-color: #2196f3;
-    height: 80px;
-    box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
-    .header {
-        display: flex;
-        justify-content: space-between;
-        &__right-menu {
-            ul {
-                list-style: none;
-                padding: 18px;
-                li {
-                    display: inline;
-                    a {
-                        color: #fcfcfc;
-                        font-size: 20px;
-                        margin: 15px;
+    @import "./fonts";
+    @import "./owl-custom.scss";
+    body {
+        font-family: "IRANSans";
+        direction: rtl;
+        background-color: #eeeeee;
+    }
+    
+    header {
+        background-color: #2196f3;
+        height: 80px;
+        box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
+        .header {
+            display: flex;
+            justify-content: space-between;
+            &__right-menu {
+                ul {
+                    list-style: none;
+                    padding: 18px;
+                    li {
+                        display: inline;
+                        a {
+                            color: #fcfcfc;
+                            font-size: 20px;
+                            margin: 15px;
+                        }
                     }
                 }
             }
-        }
-        &__left-menu {
-            padding: 10px;
-            margin: 10px;
-            color: #fcfcfc;
-            i {
-                margin-left: 30px;
+            &__left-menu {
+                padding: 10px;
+                margin: 10px;
+                color: #fcfcfc;
+                i {
+                    margin-left: 30px;
+                }
             }
         }
     }
-}
-
-.detail-product {
-    background-color: #ffffff;
-    margin-top: 60px;
-    .product-images {
-        padding: 60px 0px;
-        .product-image {
-            position: relative;
-            max-width: 100%;
+    
+    .detail-product {
+        background-color: #ffffff;
+        margin-top: 60px;
+        .product-images {
+            padding: 60px 0px;
+            .product-image {
+                position: relative;
+                max-width: 100%;
+            }
+            .tag {
+                position: absolute;
+                right: 0;
+                top: 0;
+                padding: 18px 20px;
+                color: #fcfcfc;
+                background: #f44336;
+            }
         }
-        .tag {
-            position: absolute;
-            right: 0;
-            top: 0;
-            padding: 18px 20px;
-            color: #fcfcfc;
-            background: #f44336;
+        .product-texts {
+            padding: 40px 10px;
+            .product-title {
+                font-weight: lighter;
+                font-size: 28px;
+            }
+            .product-sub-title {
+                font-weight: lighter;
+                font-size: 17px;
+                margin-top: 17px;
+            }
         }
-    }
-    .product-texts {
-        padding: 40px 10px;
-        .product-title {
-            font-weight: lighter;
-            font-size: 28px;
-        }
-        .product-sub-title {
-            font-weight: lighter;
-            font-size: 17px;
-            margin-top: 17px;
-        }
-    }
-    .product-rate {
-        display: flex;
-        justify-content: flex-start;
-        i {
-            color: #2196f3;
-        }
-    }
-    .product-price {
-        margin-top: 10px;
-        color: #777;
-    }
-    .product-color {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-        .colors {
+        .product-rate {
             display: flex;
             justify-content: flex-start;
-            .circle-color {
-                border: 2px solid #2196f3;
-                border-radius: 50%;
-                height: 35px;
-                width: 35px;
-                margin-left: 3px;
+            i {
+                color: #2196f3;
             }
-            .color-white {
-                background-color: #fcfcfc;
+        }
+        .product-price {
+            margin-top: 10px;
+            color: #777;
+        }
+        .product-color {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+            .colors {
+                display: flex;
+                justify-content: flex-start;
+                .circle-color {
+                    border: 2px solid #2196f3;
+                    border-radius: 50%;
+                    height: 35px;
+                    width: 35px;
+                    margin-left: 3px;
+                }
+                .color-white {
+                    background-color: #fcfcfc;
+                }
+                .color-blue {
+                    background-color: #2196f3;
+                }
             }
-            .color-blue {
-                background-color: #2196f3;
+        }
+        .product-garanty {
+            margin-top: 30px;
+        }
+    }
+    
+    .c-select {
+        border-radius: 0;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        height: 50px;
+    }
+    
+    .c-primary-button {
+        border-radius: 0;
+        padding: 15px 20px;
+        font-size: 17px;
+        font-weight: 300;
+        border: none;
+        background-color: #2196f3;
+        &:hover {
+            background-color: #39a1f4;
+        }
+    }
+    
+    .c-secondary-button {
+        border-radius: 0;
+        padding: 15px 20px;
+        font-size: 17px;
+        font-weight: 300;
+        background-color: #dcdcdc;
+        color: #9e9e9e;
+        border: none;
+        &:hover {
+            background-color: #e9e9e9;
+            color: #9e9e9e;
+        }
+        .scale {
+            padding: 35px;
+        }
+    }
+    
+    .product-buttons {
+        margin-top: 25px;
+        margin-bottom: 50px;
+    }
+    
+    .services {
+        margin-top: 40px;
+    }
+    
+    .images-adv {
+        margin-top: 50px;
+        margin-bottom: 60px;
+        img {
+            border-radius: 12px;
+            box-shadow: 0px 0px 14px 3px;
+            max-height: 150px;
+            max-width: 550px;
+        }
+        button {
+            position: absolute;
+            border-radius: 58px;
+            padding: 20px 20px;
+            color: #f44336;
+            border: 1px solid #f44336;
+            -webkit-transition: 0.6s;
+            transition: 0.6s;
+            background: rgba(0, 0, 0, 0);
+            top: 40px;
+            left: 112px;
+        }
+    }
+    
+    .product-similar {
+        padding-top: 50px;
+    }
+    
+    #products {
+        .item {
+            position: relative;
+            &__price {
+                display: flex;
+                justify-content: space-between;
+                &--right {
+                    background: none !important;
+                }
+                &--left {
+                    position: absolute;
+                    left: 0;
+                    padding: 8px;
+                }
             }
         }
     }
-    .product-garanty {
-        margin-top: 30px;
-    }
-}
-
-.c-select {
-    border-radius: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 50px;
-}
-
-.c-primary-button {
-    border-radius: 0;
-    padding: 15px 20px;
-    font-size: 17px;
-    font-weight: 300;
-    border: none;
-    background-color: #2196f3;
-    &:hover {
-        background-color: #39a1f4;
-    }
-}
-
-.c-secondary-button {
-    border-radius: 0;
-    padding: 15px 20px;
-    font-size: 17px;
-    font-weight: 300;
-    background-color: #dcdcdc;
-    color: #9e9e9e;
-    border: none;
-    &:hover {
-        background-color: #e9e9e9;
-        color: #9e9e9e;
-    }
-    .scale {
-        padding: 35px;
-    }
-}
-
-.product-buttons {
-    margin-top: 25px;
-    margin-bottom: 50px;
-}
-
-.services {
-    margin-top: 40px;
-}
