--- a/css/style.scss
+++ b/css/style.scss
@@ -1,353 +1,388 @@
-    @import "./fonts";
-    @import "./owl-custom.scss";
-    @import "./responsive";
-    body {
-        font-family: "IRANSans";
-        direction: rtl;
-        background-color: #eeeeee;
-    }
-    
-    header {
-        background-color: #2196f3;
-        height: 80px;
-        box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
-        .header {
-            display: flex;
-            justify-content: space-between;
-            &__right-menu {
-                ul {
-                    list-style: none;
-                    padding: 18px;
-                    li {
-                        display: inline;
-                        i {
-                            color: #fcfcfc;
-                        }
-                        a {
-                            color: #fcfcfc;
-                            font-size: 20px;
-                            margin: 15px;
-                        }
+@import "./fonts";
+@import "./owl-custom.scss";
+@import "./responsive";
+body {
+    font-family: "IRANSans";
+    direction: rtl;
+    background-color: #eeeeee;
+}
+
+header {
+    background-color: #2196f3;
+    height: 80px;
+    box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
+    .header {
+        display: flex;
+        justify-content: space-between;
+        &__right-menu {
+            ul {
+                list-style: none;
+                padding: 18px;
+                li {
+                    display: inline;
+                    i {
+                        color: #fcfcfc;
+                    }
+                    a {
+                        color: #fcfcfc;
+                        font-size: 20px;
+                        margin: 15px;
                     }
                 }
             }
-            &__left-menu {
-                padding: 10px;
-                margin: 10px;
-                color: #fcfcfc;
-                i {
-                    margin-left: 30px;
-                }
+        }
+        &__left-menu {
+            padding: 10px;
+            margin: 10px;
+            color: #fcfcfc;
+            i {
+                margin-left: 30px;
             }
         }
     }
-    
-    .detail-product {
-        background-color: #ffffff;
-        margin-top: 60px;
-        .product-images {
-            padding: 60px 0px;
-            .product-image {
-                position: relative;
-                max-width: 100%;
-            }
-            .tag {
-                position: absolute;
-                right: 0;
-                top: 0;
-                padding: 18px 20px;
-                color: #fcfcfc;
-                background: #f44336;
-            }
+}
+
+.detail-product {
+    background-color: #ffffff;
+    margin-top: 60px;
+    .product-images {
+        padding: 60px 0px;
+        .product-image {
+            position: relative;
+            max-width: 100%;
         }
-        .product-texts {
-            padding: 40px 10px;
-            .product-title {
-                font-weight: lighter;
-                font-size: 28px;
-            }
-            .product-sub-title {
-                font-weight: lighter;
-                font-size: 17px;
-                margin-top: 17px;
-            }
+        .tag {
+            position: absolute;
+            right: 0;
+            top: 0;
+            padding: 18px 20px;
+            color: #fcfcfc;
+            background: #f44336;
         }
-        .product-rate {
+    }
+    .product-texts {
+        padding: 40px 10px;
+        .product-title {
+            font-weight: lighter;
+            font-size: 28px;
+        }
+        .product-sub-title {
+            font-weight: lighter;
+            font-size: 17px;
+            margin-top: 17px;
+        }
+    }
+    .product-rate {
+        display: flex;
+        justify-content: flex-start;
+        i {
+            color: #2196f3;
+        }
+    }
+    .product-price {
+        margin-top: 10px;
+        color: #777;
+    }
+    .product-color {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        .colors {
             display: flex;
             justify-content: flex-start;
-            i {
-                color: #2196f3;
+            .circle-color {
+                border: 2px solid #2196f3;
+                border-radius: 50%;
+                height: 35px;
+                width: 35px;
+                margin-left: 3px;
+            }
+            .color-white {
+                background-color: #fcfcfc;
+            }
+            .color-blue {
+                background-color: #2196f3;
             }
         }
-        .product-price {
-            margin-top: 10px;
-            color: #777;
-        }
-        .product-color {
+    }
+    .product-garanty {
+        margin-top: 30px;
+    }
+}
+
+.c-select {
+    border-radius: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 50px;
+}
+
+.c-primary-button {
+    border-radius: 0;
+    padding: 15px 20px;
+    font-size: 17px;
+    font-weight: 300;
+    border: none;
+    background-color: #2196f3;
+    &:hover {
+        background-color: #39a1f4;
+    }
+}
+
+.c-secondary-button {
+    border-radius: 0;
+    padding: 15px 20px;
+    font-size: 17px;
+    font-weight: 300;
+    background-color: #dcdcdc;
+    color: #9e9e9e;
+    border: none;
+    &:hover {
+        background-color: #e9e9e9;
+        color: #9e9e9e;
+    }
+    .scale {
+        padding: 35px;
+    }
+}
+
+.product-buttons {
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+.services {
+    margin-top: 40px;
+}
+
+.images-adv {
+    margin-top: 50px;
+    margin-bottom: 60px;
+    img {
+        border-radius: 12px;
+        box-shadow: 0px 0px 14px 3px;
+        max-height: 150px;
+        max-width: 550px;
+    }
+    button {
+        position: absolute;
+        border-radius: 58px;
+        padding: 20px 20px;
+        color: #f44336;
+        border: 1px solid #f44336;
+        -webkit-transition: 0.6s;
+        transition: 0.6s;
+        background: rgba(0, 0, 0, 0);
+        top: 40px;
+        left: 112px;
+    }
+}
+
+.product-similar {
+    padding-top: 50px;
+}
+
+#products {
+    .item {
+        background: #ffff;
+        position: relative;
+        margin-bottom: 10px;
+        &__price {
+            margin-bottom: 41px;
             display: flex;
             justify-content: space-between;
-            margin-top: 10px;
-            .colors {
-                display: flex;
-                justify-content: flex-start;
-                .circle-color {
-                    border: 2px solid #2196f3;
-                    border-radius: 50%;
-                    height: 35px;
-                    width: 35px;
-                    margin-left: 3px;
-                }
-                .color-white {
-                    background-color: #fcfcfc;
-                }
-                .color-blue {
-                    background-color: #2196f3;
+            &--right {
+                position: absolute;
+                padding: 9px 15px;
+                span {
+                    background: none !important;
+                    color: #7a7878;
                 }
             }
-        }
-        .product-garanty {
-            margin-top: 30px;
-        }
-    }
-    
-    .c-select {
-        border-radius: 0;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        height: 50px;
-    }
-    
-    .c-primary-button {
-        border-radius: 0;
-        padding: 15px 20px;
-        font-size: 17px;
-        font-weight: 300;
-        border: none;
-        background-color: #2196f3;
-        &:hover {
-            background-color: #39a1f4;
-        }
-    }
-    
-    .c-secondary-button {
-        border-radius: 0;
-        padding: 15px 20px;
-        font-size: 17px;
-        font-weight: 300;
-        background-color: #dcdcdc;
-        color: #9e9e9e;
-        border: none;
-        &:hover {
-            background-color: #e9e9e9;
-            color: #9e9e9e;
-        }
-        .scale {
-            padding: 35px;
-        }
-    }
-    
-    .product-buttons {
-        margin-top: 25px;
-        margin-bottom: 50px;
-    }
-    
-    .services {
-        margin-top: 40px;
-    }
-    
-    .images-adv {
-        margin-top: 50px;
-        margin-bottom: 60px;
-        img {
-            border-radius: 12px;
-            box-shadow: 0px 0px 14px 3px;
-            max-height: 150px;
-            max-width: 550px;
-        }
-        button {
-            position: absolute;
-            border-radius: 58px;
-            padding: 20px 20px;
-            color: #f44336;
-            border: 1px solid #f44336;
-            -webkit-transition: 0.6s;
-            transition: 0.6s;
-            background: rgba(0, 0, 0, 0);
-            top: 40px;
-            left: 112px;
-        }
-    }
-    
-    .product-similar {
-        padding-top: 50px;
-    }
-    
-    #products {
-        .item {
-            background: #ffff;
-            position: relative;
-            margin-bottom: 10px;
-            &__price {
-                margin-bottom: 41px;
-                display: flex;
-                justify-content: space-between;
-                &--right {
-                    position: absolute;
-                    padding: 9px 15px;
-                    span {
-                        background: none !important;
-                        color: #7a7878;
-                    }
+            &--left {
+                background: #2196f3;
+                position: absolute;
+                left: 0;
+                padding: 8px 15px;
+                transition: 1s;
+                .arrow {
+                    display: none;
                 }
-                &--left {
-                    background: #2196f3;
-                    position: absolute;
-                    left: 0;
-                    padding: 8px 15px;
-                    transition: 1s;
+                &:hover {
                     .arrow {
-                        display: none;
-                    }
-                    &:hover {
-                        .arrow {
-                            display: inline-block;
-                        }
+                        display: inline-block;
                     }
                 }
             }
-            &__title {
-                text-align: center;
-                font-size: 20px;
-                font-weight: bold;
-                text-shadow: 0 0 2px #ccc;
-                &:hover {
-                    color: #2196f3;
-                }
-            }
-            &__sub-title {
-                text-align: center;
-                font-size: 15px;
-                text-shadow: 0 0 2px #ccc;
-                padding-bottom: 20px;
-                &:hover {
-                    color: #2196f3;
-                }
-            }
         }
-    }
-    
-    .owl-prev {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        &:hover {
-            background: none !important;
-        }
-        span {
-            font-size: 70px;
-            color: #2196f3;
-        }
-    }
-    
-    .owl-next {
-        position: absolute;
-        left: 0;
-        top: 50%;
-        &:hover {
-            background: none !important;
-        }
-        span {
-            font-size: 70px;
-            color: #2196f3;
-        }
-    }
-    
-    .tab-content {
-        min-height: 320px;
-        .add-comments {
-            text-align: left;
-        }
-    }
-    
-    .tab-detail {
-        margin-top: 70px;
-        .custom-tab-content {
-            background-color: #fcfcfc;
-        }
-        .nav-tabs .nav-item.show .nav-link,
-        .nav-tabs .nav-link.active {
-            background-color: transparent;
-            border: none;
-            border-bottom: 2px solid #2196f3;
-        }
-        .nav-item {
-            padding: 20px;
-            color: #666666;
-            font-size: 17px;
+        &__title {
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            text-shadow: 0 0 2px #ccc;
             &:hover {
                 color: #2196f3;
-                transition-duration: 0.5s;
-                transition-delay: 0.5;
-                font-weight: 500;
-                transform: translateY(-5px)
             }
         }
-        .tab-pane {
-            padding: 36px;
-            p {
-                margin-bottom: 0;
-                font-weight: 300;
-                line-height: 30px;
-            }
-            .box {
-                display: flex;
-                justify-content: flex-start;
-                &__right {
-                    background-color: #edebeb6b;
-                    padding: 10px 30px;
-                    color: #4d4d4d;
-                    font-size: 14px;
-                    margin-bottom: 5px;
-                }
-                &__left {
-                    background-color: #edebeb6b;
-                    padding: 10px 30px;
-                    font-weight: lighter;
-                    font-size: 14px;
-                    margin-bottom: 5px;
-                    margin-right: 5px
-                }
-            }
-        }
-        .comments {
-            display: flex;
-            justify-content: flex-start;
-            margin-bottom: 35px;
-            &__avatar {
-                margin-left: 10px;
-                img {
-                    border-radius: 50%;
-                    width: 60px;
-                    height: 60px;
-                }
-            }
-            &__text {
-                padding-top: 7px;
-                font-size: 15px;
-                text-align: right;
-                .user-name {
-                    color: #39a1f4;
-                }
-            }
-            .Bought-the-product {
-                background-color: #007bff;
-                border-radius: 5px;
-                margin: 5px;
-                font-weight: 200;
-                color: #ffff;
-                font-size: small;
-                padding-right: 16px;
-                padding-left: 20px;
+        &__sub-title {
+            text-align: center;
+            font-size: 15px;
+            text-shadow: 0 0 2px #ccc;
+            padding-bottom: 20px;
+            &:hover {
+                color: #2196f3;
             }
         }
     }
+}
+
+.owl-prev {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    &:hover {
+        background: none !important;
+    }
+    span {
+        font-size: 70px;
+        color: #2196f3;
+    }
+}
+
+.owl-next {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    &:hover {
+        background: none !important;
+    }
+    span {
+        font-size: 70px;
+        color: #2196f3;
+    }
+}
+
+.tab-content {
+    min-height: 320px;
+    .add-comments {
+        text-align: left;
+    }
+}
+
+.tab-detail {
+    margin-top: 70px;
+    .custom-tab-content {
+        background-color: #fcfcfc;
+    }
+    .nav-tabs .nav-item.show .nav-link,
+    .nav-tabs .nav-link.active {
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid #2196f3;
+    }
+    .nav-item {
+        padding: 20px;
+        color: #666666;
+        font-size: 17px;
+        &:hover {
+            color: #2196f3;
+            transition-duration: 0.5s;
+            transition-delay: 0.5;
+            font-weight: 500;
+            transform: translateY(-5px)
+        }
+    }
+    .tab-pane {
+        padding: 36px;
+        p {
+            margin-bottom: 0;
+            font-weight: 300;
+            line-height: 30px;
+        }
+        .box {
+            display: flex;
+            justify-content: flex-start;
+            &__right {
+                background-color: #edebeb6b;
+                padding: 10px 30px;
+                color: #4d4d4d;
+                font-size: 14px;
+                margin-bottom: 5px;
+            }
+            &__left {
+                background-color: #edebeb6b;
+                padding: 10px 30px;
+                font-weight: lighter;
+                font-size: 14px;
+                margin-bottom: 5px;
+                margin-right: 5px
+            }
+        }
+    }
+    .comments {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 35px;
+        &__avatar {
+            margin-left: 10px;
+            img {
+                border-radius: 50%;
+                width: 60px;
+                height: 60px;
+            }
+        }
+        &__text {
+            padding-top: 7px;
+            font-size: 15px;
+            text-align: right;
+            .user-name {
+                color: #39a1f4;
+            }
+        }
+        .Bought-the-product {
+            background-color: #007bff;
+            border-radius: 5px;
+            margin: 5px;
+            font-weight: 200;
+            color: #ffff;
+            font-size: small;
+            padding-right: 16px;
+            padding-left: 20px;
+        }
+    }
+}
+
+.footer-phone {
+    margin-top: 70px;
+    background-color: #39a1f4;
+    height: 100px;
+    width: 100%;
+    box-shadow: 0px 3px 18px 0px rgba(110, 109, 110, 1);
+    .footer-text {
+        padding: 30px;
+        a {
+            color: #fcfcfc;
+            text-decoration: none;
+            &:hover {
+                color: black;
+            }
+        }
+    }
+}
+
+.footer-menu {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 60px;
+    .menu {
+        color: #6666;
+        width: 300px;
+        padding: 30px;
+        margin: 0;
+        margin-bottom: 15px;
+        .menu-item {
+            list-style: none;
+            padding: 5px;
+        }
+    }
+}
